Sun Feb 22 13:03:12 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* eval.c (ruby_options): the evaluater now expects iseq instead of tree.

	* ruby.c (ruby_process_options): ditto.

Sun Feb 22 13:03:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (configure): unset PWD to use symlink to building
	  directory.

	* Makefile.in (up): cd doesn't need LC_TIME, VCS needs.

Sun Feb 22 10:43:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (method_missing): should not pop cfp if missing method
	  is method_missing.  [ruby-core:22298]

	* vm_eval.c (rb_raise_method_missing): new function to directly
	  raise NoMethodError.

	* vm_insnhelper.c (vm_call_method): fixed the case method_missing
	  is missing.

Sun Feb 22 02:15:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): handle EMSGSIZE as
	  well.

Sun Feb 22 02:03:46 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): check max length
	  overflow.

Sun Feb 22 01:52:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): don't call
	  discard_cmsg_resource when EMFILE.

Sun Feb 22 01:48:51 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): gc when SCM_RIGHTS
	  hit the file descriptor limit.

Sun Feb 22 00:51:58 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_getpartial): error message describes what should be
	  waited after nonblocking error.
	  (rb_io_write_nonblock): ditto.

	* ext/socket/init.c (s_recvfrom_nonblock): ditto.
	  (s_accept_nonblock): ditto.

	* ext/socket/socket.c (sock_connect_nonblock): ditto.

	* ext/socket/ancdata.c (bsock_sendmsg_internal): ditto.
	  (bsock_recvmsg_internal): ditto.

Sun Feb 22 00:31:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): check recvmsg error
	  earlier.

Fri Feb 20 23:28:11 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
