@@ -1,3 +1,10 @@
+Sun Feb 22 13:38:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/init.c (s_recvfrom_nonblock): handles EAGAIN too.
+
+	* ext/socket/init.c (s_accept_nonblock): ditto, and EPROTO depends
+	  on platforms.
+
 Sun Feb 22 13:03:12 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* eval.c (ruby_options): the evaluater now expects iseq instead of tree.
